--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,21 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
+    background: linear-gradient(to right, #a8a8a8, #ffffff);
+
 }
 
 header {
+    background-image: url("docs/Harmony.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     text-align: center;
-    padding: 40px 0;
+    padding: 120px 0;
     background-color: #f5f5f5;
     border-radius: 5px;
     margin-bottom: 30px;
+    color: white;
 }
 
 h1 {
@@ -52,19 +59,27 @@ code {
     font-family: 'Courier New', Courier, monospace;
 }
 
-.developer {
+.developer-info {
     display: flex;
     align-items: center;
-    margin-bottom: 30px;
+    justify-content: space-between;
+    width: 100%;
 }
 
-.developer-info {
-    flex: 1;
+.developer-info h3 {
+    margin: 0;
+}
+
+.developer-info img {
+    width: 150px;
+    height: 180px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 .developer img {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 180px;
     border-radius: 50%;
     margin-right: 20px;
 }
@@ -81,6 +96,9 @@ a {
     color: #3498db;
     text-decoration: none;
 }
+
+#viewCompiler {
+    box-shadow: 2px 2px 10px black;}
 
 a:hover {
     text-decoration: underline;
